web/themes/gavias_colin/css/master.css
/* ... */
@media (max-width: 991px) {
  .hamburger .gva-search-region {
    right: 30px;
  }

  .hamburger .gva-search-region {
    margin-top: -34px !important;
  }

  .hamburger .gva-quick-side.open {
    right: 0;
    width: 375px;
  }

  .hamburger .slideshow_content.area {
    top: 0 !important;
  }

  .hamburger .quick-side-icon {
    right: 60px !important;
  }

  .hamburger .gva-search-region .search-content {
    width: 410px !important;
    top: 50px !important;
  }

  .hamburger .hamit {
    margin: 25px 0 0;
  }
}

.pull-right.better {
  float: right !important;
  margin: 0 0 20px;
}

#footer .copyright {
  padding-bottom: 0 !important;
}

.container-fluid.wdg-web {
  padding: 10px 0;
  background: var(--mha-aqua);
  font-size: .8rem;
}

.pull-left.small {
  font-size: 70%;
  color: var(--mha-white);
}

a.white {
  color: var(--mha-white);
  text-decoration: none
}

#footer a.sli-button {
  padding: .75rem 3rem;
  cursor: pointer !important;
  color: var(--mha-aqua) !important;
  background: white !important;
}

#footer .sli-input {
  background-color: rgba(255,255, 255, 0.1) !important;
  color: var(--mha-white) !important;
  width: 100%;
}

.red-background {
  background-color: rgba(180, 46, 50, 0.9) !important;
}

.js-form-required {
  text-shadow: none;
}

div#edit-actions {
  margin: 0;
}

label {
  display: inline-block;
  max-width: 100%;
  margin-bottom: 5px;
  font-weight: 400;
}

span.fieldset-legend {
  font-size: 1rem;
}

.webform-submission-form .form-actions .webform-button--submit {
  padding: inherit;
}

.facet-item__value {
  padding: 0;
  font-weight: bold;
  font-size: .75rem;
}

.path-solr-search .body-page input[type="text"] {
  float: left;
  padding: 3px;
}

.path-solr-search div#page-main-content {
  margin: 0 !important;
}

.mb-search img {
  display: none;
}

.path-solr-search h2 {
  font-size: 26px;
  margin: 1rem 0 2rem;
  text-transform: uppercase !important;
}

.path-solr-search h3 a {
  color: rgb(56, 88, 135) !important;
  font-size: 1.5rem;
  padding: 0;
  margin: 0;
  line-height: 1.2;
}

.path-solr-search p {
  margin: .25rem 0 !important;
}

.path-solr-search ol li {
  border-bottom: 1px solid var(--mha-white);
  margin: 0 0 1.5rem;
}

.path-solr-search ol {
  margin-top: 0;
  margin-bottom: 12px;
  list-style: none;
}

.mb-search.item {
  margin: 0 0 50px;
}

.path-solr-search h1,
.path-solr-search h2,
.path-solr-search h3,
.path-solr-search h4,
.path-solr-search h5,
.path-solr-search h6 {
  font-size: 18px !important;
  margin: 1rem 0 .5rem 0 !important;
  text-transform: inherit !important;
}

#edit-keys {
  border: 1px solid var(--mha-light-grey);
  padding: .27rem 1rem;
  margin: 0 0 1rem;
}

input[type="submit"] {
  height: 35px;
  line-height: 35px;
  padding: 0 5px;
  background: var(--mha-blue);
  color: var(--mha-white);
  border: none;
  font-size: 14px;
  width: 90px;
  border: none !important;
  border-width: 0 !important;
  box-shadow: none !important;
}

input:focus, textarea:focus, select:focus {
  outline: none;
}

svg.ext {
  display: none;
}

#edit-keys {
  border: 1px solid var(--mha-light-grey);
  padding: .27rem 1rem;
  margin: 0 0 1rem;
}

input[type="submit"] {
  height: 35px;
  line-height: 35px;
  padding: 0 5px;
  background: var(--mha-blue-hover);
  color: var(--mha-white);
  font-size: 14px;
  width: 90px;
  border: none !important;
  box-shadow: none !important;
}

input:focus, textarea:focus, select:focus {
  outline: none;
}

.path-search label {
  display: none;
}

.path-search h2 {
  font-size: 26px;
  margin: 1rem 0 2rem;
  text-transform: uppercase !important;
}

.path-search h3 a {
  color: rgb(56, 88, 135) !important;
  font-size: 1.5rem;
  padding: 0;
  margin: 0;
  line-height: 1.2;
}

.path-search p {
  margin: .25rem 0 !important;
}

.path-search ol li {
  border-bottom: 1px solid var(--mha-white);
  margin: 0 0 1.5rem;
}

.path-search ol {
  margin-top: 0;
  margin-bottom: 12px;
  list-style: none;
}

.logged-in #page-main-content {
  margin: 10px 0 0;
}

.hamburger div#content {
  margin: 200px 0 0;
}


/*************Mental Health Report Rankings************/

.views-element-container.rankings,
.views-element-container.rankings table {
  background: var(--mha-white);
}

.views-element-container.rankings table > thead:first-child > tr:first-child > th {
  background: var(--mha-info);
}

.views-element-container.rankings table > thead:first-child > tr:first-child > th a,
.views-element-container.rankings table > thead:first-child > tr:first-child > th a:hover {
  color: var(--mha-white);
  text-decoration: none;
}

.views-element-container table > tbody > tr.rankings > td {
  padding: 5px 10px !important;
  border-bottom: none !important;
  font-size: 14px;
  font-weight: bold;
}

.views-element-container.rankings table > thead > tr > th, table > thead > tr > td,
.views-element-container.rankings table > tbody > tr > th, table > tbody > tr > td {
  border-color: inherit;
  border: none;
}

/*************Mental Health Report Rankings************/

.logged-in .help {
  position: relative;
  z-index: 1;
  display: none;
  margin: 75px 0 0;
}

.body-page input[type="text"],
.body-page input[type="tel"],
.body-page input[type="password"],
.body-page input[type="email"],
.body-page textarea,
.body-page select {
  background-color: var(--mha-white);
  box-shadow: none;
  padding: 5px 10px;
}

header.header-v1 .header-main-inner .header-inner {
  padding-right: 90px;
}

.header-v1 .gva-search-region {
  top: 30%;
}

#footer {
  background-color: var(--mha-blue-hover);
  background: url('/sites/default/files/inline-images/footer-image.jpg') top center;
}

#footer-2 a:hover,
#footer-2 a:focus,
#footer-2 a:active,
#footer-2 a:visited {
  outline: none !important;
  color: var(--mha-lime);
}

.sli-button.sli-small, .sli-button.sli-small {
  padding: 1rem 2rem !important;
  font-size: 1rem !important;
  color: black !important;
  background: var(--mha-orange) !important;
  font-weight: bold;
  letter-spacing: .1rem;
}
/* ... */

